# chess-robot

./: .gitignore  CMakeLists.txt  README.md  README_UR3e.md  cheat_sheet.txt  package.xml  setup.py
computer_vision/: chess_core.py  chessboard_analyser.py  python_chess3.py  square_processing.py
computer_vision/depreciated/: board_detection.py  board_manual_calib.py  centroid_detection.py  chess-detection-with-pieces.py  corner.py  cv_piece_matching.py  detect_occupied.py  piece_detection.py  piece_matching.py  python_chess2.py  python_guui_test.py
computer_vision/troubleshooting/: hsv_calibrator.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rs2/lib/rs2/: rs2
install/rs2/share/ament_index/resource_index/package_run_dependencies/: rs2
install/rs2/share/ament_index/resource_index/parent_prefix_path/: rs2
install/rs2/share/rs2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rs2/share/rs2/cmake/: rs2Config-version.cmake  rs2Config.cmake
install/rs2/share/rs2/environment/: ament_prefix_path.dsv  path.dsv
launch/: ur3e_mtc.launch.py  ur_final.launch.py
log/: latest_build
picker/: CMakeLists.txt  package.xml
picker/src/: test_move.cpp
src/: main.cpp
src/GUI/: GUI.cpp  GUI.h  RobotNode.cpp  RobotNode.h  lastversion.cpp
src/ai_integration/: ai.py
src/computer_vision/: README.md  chess_core.py  piecedetection_ML.py  python_chess2.py  python_chess3.py  square_processing.py
src/computer_vision/depreciated/: detection_with_pieces.py  python_chess.py
src/robot_manipulation/: README.md  boardPos.cpp  boardPos.h  boardPosTester.cpp  boardTester.cpp  cartesianMove.cpp  cartesianMove.h  chess_main.cpp  main.cpp  main.h  main_tester.cpp  main_tester.h  robotControl.cpp  robotControl.h  safetyManager.cpp  safetyManager.h  ur3e_mtc.cpp
src/ur3e_mtc_demo/: CMakeLists.txt  package.xml
src/ur3e_mtc_demo/config/: move_group_capabilities.yaml  ur3e_mtc.rviz
src/ur3e_mtc_demo/launch/: ur3e_mtc_combined.launch.py  ur3e_mtc_demo.launch.py  ur3e_mtc_demo_with_config.launch.py  ur3e_mtc_main.launch.py
src/ur3e_mtc_demo/src/: boardPos.cpp  boardPos.h  main.cpp  ur3e_mtc.cpp  ur3e_mtc.h  ur3e_mtc_demo.cpp
